# test

./: CMakeLists.txt  homeworks8_4_2.cpp  main.cpp  man.cpp
